# lor-e

./: Dockerfile  Dockerfile.pgvector  README.md  TODO.md  docker-compose.yml  generate_signature.py  init_db.sql
.github/workflows/: build.yaml  build_pgvector.yaml  test.yaml
charts/issue-bot/: .helmignore  Chart.yaml  values.yaml
charts/issue-bot/templates/: _helpers.tpl  deployment.yaml  ingress.yaml  service-account.yaml  service.yaml
issue-bot/: Cargo.toml
issue-bot/configuration/: base.yaml
issue-bot/src/: config.rs  errors.rs  github.rs  huggingface.rs  main.rs  metrics.rs  middlewares.rs  routes.rs  slack.rs  summarization.rs
issue-bot/src/embeddings/: inference_endpoints.rs  local.rs  mod.rs
issue-bot/src/fixtures/: lor_e.sql
