[package]
name = "issue-bot"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
# axum = { version = "0.8", features = ["macros"] }
axum = "0.8"
config = { version = "0.15", features = ["yaml"] }
hex = "0.4"
hmac = "0.12"
metrics = "0.24"
metrics-exporter-prometheus = "0.16"
nanoid = "0.4"
once_cell = "1.20"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
sqlx = { version = "0.8", features = ["postgres", "runtime-tokio"] }
thiserror = "2"
tokio = { version = "1.0", features = ["full"] }
tower = { version = "0.5.2", features = ["util", "timeout"] }
tower-http = { version = "0.6.1", features = ["add-extension", "trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
