[package]
name = "issue-bot"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
# axum = { version = "0.8", features = ["macros"] }
axum = "0.8"
# candle-nn = "0.8"
# candle = { version = "0.8", package = "candle-core", default-features = false }
# candle-transformers = "0.8"
chrono = "0.4"
config = { version = "0.15", features = ["yaml"] }
futures = "0.3"
hex = "0.4"
# hf-hub = { version = "0.4", features = ["tokio"] }
hmac = "0.12"
metrics = "0.24"
metrics-exporter-prometheus = "0.16"
nanoid = "0.4"
once_cell = "1.20"
pgvector = { version = "0.4", features = ["sqlx"] }
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
sqlx = { version = "0.8", features = ["chrono", "postgres", "runtime-tokio"] }
thiserror = "2"
# tokenizers = { version = "0.21", default-features = false, features = ["onig"] }
tokio = { version = "1.0", features = ["full"] }
tower = { version = "0.5.2", features = ["util", "timeout"] }
tower-http = { version = "0.6.1", features = ["add-extension", "trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# [features]
# cuda = ["candle/cuda", "candle-nn/cuda", "candle-transformers/cuda"]
# metal = ["candle/metal", "candle-nn/metal", "candle-transformers/metal"]
# mkl = ["candle/mkl", "candle-nn/mkl", "candle-transformers/mkl"]
